// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable Tests Text components can be tappable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests TouchableWithoutFeedback components should not give visual feedback 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_without_feedback_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Tap Here For No Feedback!",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              904,
              22,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          6,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          904,
          22,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_without_feedback_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      33,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests Touchables can contain a Text component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_text_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Tap Here For Custom Highlight!",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              224,
              22,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          6,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          224,
          22,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_highlight_text_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      234,
      50,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests Touchables can contain an Image component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_image_button",
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_highlight_image_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      50,
      50,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests Touchables can delay events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_delay_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_delay_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      19,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests Touchables can enable a hit slop region 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_hit_slop_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              146,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          146,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_hit_slop_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      146,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests Touchables can register feedback events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_feedback_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "touchable feedback events",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "touchable_feedback_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
